<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rm_ros2_control</name>
  <version>0.0.0</version>
  <description>Meta package that contains package of rm_ros2_control.</description>
  <maintainer email="1961466188@qq.com">Guanlin Chen</maintainer>
  <license>BSD</license>
  <!-- packages in project -->
  <exec_depend>rm_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
